--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "37b2d572-f040-45e7-9eae-6aeacd49b707"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
